# mathgap-experiments

./: .gitignore  Readme.md  demo_generation.py  pyproject.toml  test.ipynb
experiments/opedal24_ood_eval/: Readme.md  datasets.py  generate.py
experiments/opedal24_ood_eval/.venv-opedal/: pyvenv.cfg
experiments/opedal24_ood_eval/data/agents/long/: agents.csv
experiments/opedal24_ood_eval/data/attributes/v1/: attributes.csv
experiments/opedal24_ood_eval/data/entities/v1/: entities.csv  entities_part_whole.json
experiments/opedal24_ood_eval/data/templates/v1/: comp.json  compeq.json  container.json  partwhole.json  transfer.json
mathgap/: generation_util.py  problemsample.py
mathgap/data/: util.py
mathgap/instantiate/: __init__.py  entityconsistency.py
mathgap/logicalforms/: __init__.py  logicalform.py
mathgap/natlang/templates/: parser.py  sampling.py  template.py  templaterenderer.py
mathgap/renderers/: text.py
mathgap/trees/: prooftree.py
mathgap/trees/generators/: general.py  multi.py
mathgap/trees/rules/: __init__.py
mathgap/trees/rules/container/: __init__.py
