[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathgap"
version = "1.0"
description = "A Python package for mathgap functionality"
readme = "Readme.md"
requires-python = ">=3.7"
dependencies = [
    "click==8.1.7",
    "pandas==2.2.2",
    "pydantic==2.9.2",
    "matplotlib==3.9.2",
    "networkx==3.3",
    "pyvis==0.3.2",
]

[tool.setuptools]
packages = ["mathgap"]

[project.urls]
homepage = "https://github.com/eth-lre/mathgap-experiments"
